--- a/css/style.css
+++ b/css/style.css
@@ -81,20 +81,33 @@ body{
   display: block;
   min-width: 60px;
   max-width: 100px;
+  margin: 0 auto 30px auto;
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
+  transition: .1s ease-out;
+}
+
+.sidenav li a:hover {
+  background: #b07dfb;
 }
 
 
-
-
-
+/* CONTENT */
 
 .content {
   grid-area: content;
 }
 
+
+/* ANUNCIOS */
+
 .anuncios {
   grid-area: anuncios;
 }
+
+/* FOOTER */
 
 .footer {
   grid-area: footer;
