--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,16 @@ body{
 
 .content {
   grid-area: content;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+}
+
+.col-wide {
+  grid-column: 1 / -1;
 }
 
 
