Estilo básico concluido.

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,13 @@ body{
   ;
 }
 
+@media (max-width: 1200px){
+  body{
+    background: blue
+    ;
+  }
+}
+
 /* HEADER */
 .header {
   grid-area: header;
@@ -191,17 +198,40 @@ body{
   top: 2px;
 }
 
+.destaque {
+  font-size: 0.875em;
+  color: #b07dfb;
+  max-width: 16em;
+}
+
 
 /* CITAÇÃO */
-.citacao {
+.citacao, .atributos {
+  align-self: start;
   background: linear-gradient(135deg, #8844ee, #b07dfb);
+  box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
   padding: 30px;
   border-radius: 5px;
-  text-align: center;
 }
 
 .citacao p {
+  font-size: 1.5em;
+  font-style: italic;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
   color: #ffffff;
+}
+
+.atributos li {
+  color: #ffffff;
+  font-family: courier, monospace;
+  font-size: 1.125em;
+  padding: 15px;
+}
+
+.atributos li + li {
+  border-top: 2px solid #b07dfb;
 }
 
 /* ANUNCIOS */
