--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,27 @@ body{
 }
 
 @media (max-width: 1200px){
-  body{
-    background: blue
-    ;
+  .estrutura {
+    grid-template-areas: 
+    "header header header"
+    "sidenav content content"
+    "sidenav anuncios anuncios"
+    "footer footer footer";
   }
 }
+
+@media (max-width: 760px){
+  .estrutura{
+    grid-template-columns: 100%;
+    grid-template-areas: 
+    "header"
+    "sidenav"
+    "content"
+    "anuncio"
+    "footer";
+  }
+}
+
 
 /* HEADER */
 .header {
@@ -76,6 +92,21 @@ body{
   margin-left: 30px;
 }
 
+@media (max-width: 760px){
+  .header {
+    grid-template-columns: auto;
+  }
+  .logo {
+    margin-bottom: 20px;
+  }
+  .header nav a {
+    font-size: 1em;
+  }
+  .header li + li {
+    margin-left: 10px;
+  }
+}
+
 
 
 /* SIDENAV */
@@ -100,6 +131,46 @@ body{
 
 .sidenav li a:hover {
   background: #b07dfb;
+}
+
+@keyframes seta {
+  from {
+    right: 30px
+  }
+  to {
+    right: 20px;
+  }
+}
+
+@media (max-width: 760px){
+  .sidenav {
+    position: relative;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
+  .sidenav::after{
+    content: "→";
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    color: rgba(0,0,0,.3);
+    animation: seta .5s ease-in 0s infinite alternate;
+
+  }
+  .sidenav ul {
+    display: flex;
+  }
+  .sidenav ul li {
+    flex: 1 0 60px;
+  }
+  .sidenav {
+    padding: 0 30px;
+  }
+  .sidenav li a {
+    margin: 30px 30px 30px 0;
+  }  
 }
 
 
