--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,14 @@ a {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   display: block;
   border-radius: 5px;
 }
 
 body{
   font-family: 'Vollkorn', Georgia, serif;
+  width: 100vw;
 }
 
 /* GRID GERAL */
@@ -49,7 +50,7 @@ body{
     "header"
     "sidenav"
     "content"
-    "anuncio"
+    "anuncios"
     "footer";
   }
 }
@@ -154,7 +155,7 @@ body{
     display: block;
     position: absolute;
     top: 5px;
-    right: 30px;
+    right: 25px;
     color: rgba(0,0,0,.3);
     animation: seta .5s ease-in 0s infinite alternate;
 
@@ -201,6 +202,12 @@ body{
 
 .imagem-3 {
   margin: 0 auto;
+}
+
+@media (max-width: 600px){
+  .content {
+    grid-template-columns: auto;
+  }
 }
 
 /* ESTILOS CONTENT */
@@ -314,7 +321,10 @@ body{
   align-content: start;
   padding: 30px;
   gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
+
+
 
 
 /* FOOTER */
